--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "description": "Like Pinterest but better",
     "main": "index.js",
+    "scripts": {
+        "start": "node index.js"
+    },
     "repository": {
         "type": "git",
         "url": "git+ssh://git@github.com:Seanhetzel/cloneterest.git"
