--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
     "description": "Like Pinterest but better",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+ssh://git@github.com:Seanhetzel/cloneterest.git"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [
         "cloneterest",
@@ -19,5 +15,10 @@
     ],
     "author": "Sean Hetzel",
     "license": "MIT",
-    "homepage": "https://github.com/Seanhetzel/cloneterest"
+    "dependencies": {
+        "express": "^4.9.8"
+    },
+    "engines": {
+        "node": "10.x"
+    }
 }
